adds titles to admonitions

--- a/docs/software/tools/git.mdx
+++ b/docs/software/tools/git.mdx
@@ -152,7 +152,7 @@ If another developer has commit to the branch you are using from another compute
 git pull
 ```
 
-:::warning
+:::warning[Keep Your Repo Updated]
 Git can get very nasty if you try to do the following
     - Pushing to remote with your local repo missing commits on the remote repo
     - Pulling from remote with your local repo having additional commits not on the remote repo
