--- a/docs/software/tools/github.mdx
+++ b/docs/software/tools/github.mdx
@@ -15,7 +15,7 @@ If the project you are going to work on is already hosted on GitHub you can clon
 ```bash
 git clone REPO_URL
 ```
-:::info
+:::info[Finding the REPO_URL]
 You can find the repo URL on the GitHub page for the repo. There are two options, HTTPS and SSH. If you are not sure which one to use, use the HTTPS option. If you are using SSH, make sure you have your SSH key setup with GitHub. For example using this projects repo as an example the REPO_URL may either be
    - SSH_URL: `git@github.com:FRC-Team-4143/FRC-Team-4143.github.io.git`
    - HTTPS_URL: `https://github.com/FRC-Team-4143/FRC-Team-4143.github.io.git`
