--- a/docs/software/tools/hw-config.mdx
+++ b/docs/software/tools/hw-config.mdx
@@ -29,7 +29,7 @@ We try to set most settings in code that way we can enforce and ensure the devic
         The two different roboRIOs have different imaging processes as listed below. The device has both firmware and a software application image. The firmware updates are rare, but there is a yearly season image release.
         - [Imaging the RIO - roboRIO 2](https://docs.wpilib.org/en/stable/docs/zero-to-robot/step-3/roborio2-imaging.html)
         - [Imaging the RIO - roboRIO](https://docs.wpilib.org/en/stable/docs/zero-to-robot/step-3/imaging-your-roborio.html)
-        ::::danger
+        ::::danger[AVOID THE ORIGINAL RIO]
         Avoid using the original roboRIO since it has barely enough memory to run modern FRC code. Only use it for simple applications like test benches or small project robots.
         ::::
 
@@ -66,7 +66,7 @@ We try to set most settings in code that way we can enforce and ensure the devic
 
     <TabItem value="rev" label="REV ⚙️">
     ## REV Robotics
-    ::::warn
+    ::::warn[CTRE Devices are Preferred]
     We tend to try to limit REV devices on the robot to attempt to run a common motor controller ecosystem. Sometimes there is no other option and a REV device is the best for a given situation.
     ::::
     Hardware that we typically use from REV includes:
@@ -89,8 +89,8 @@ We try to set most settings in code that way we can enforce and ensure the devic
     - [Updating Device Firmware - PDH](https://docs.revrobotics.com/rev-hardware-client/ion/power-distribution-hub/updating-a-power-distribution-hub)
     - [Viewing Device Telemetry](https://docs.revrobotics.com/rev-hardware-client/ion/telemetry)
 
-    ::::warning
-    Make sure to press `Persist Perimeters` after making any device changes for them to stay across power cycle!
+    ::::warning[Update Your Parameters]
+    Make sure to press `Persist Parameters` after making any device changes for them to stay across power cycle!
     ::::
     </TabItem>
 
@@ -102,7 +102,7 @@ We try to set most settings in code that way we can enforce and ensure the devic
     There is not much configuration required for the PWF TOF sensor. It doesn't even require an external application. Once the library has been added to the robot project and a sensor has been added in code it will force a webserver to launch on the robot network. This webserver allow for changing the CAN id of the device and blinking the LED for identification.
 
     You can reach the webserver by entering `10.41.43.2:5812` into a web browser on the robot network. If you are connected to the RIO via usb you can also try `172.22.11.2:5812`.
-    ::::tip
+    ::::tip[Not on a 4143 Robot?]
     Ensure the address matches the roboRIOs and the port is `5812`
     ::::
     </TabItem>
