adds basic driver station doc info

--- a/docs/software/tools/driver-station.mdx
+++ b/docs/software/tools/driver-station.mdx
@@ -4,3 +4,42 @@ description: How to use the FRC Drivers Station for robot operation.
 hide_table_of_contents: true
 sidebar_position: 5
 ---
+
+# FRC Driver Station
+The Driver Station is the primary operator interface with the robot. It can be opened on a laptop connected to the robot network. It is used to enable/disable the robot along with transmit the joystick inputs to the robot to be used in robot code. This is a simple overview of the Driver Station, but more documentation can be found [here](https://docs.wpilib.org/en/stable/docs/software/driverstation/driver-station.html).
+
+## Enabling and Disabling
+The robot will boot up to an disabled state. The robot code is still running, but all motor outputs are disabled so nothing will move. Sensors will still update. Once the robot is enabled motor outputs will be enabled.
+
+You can quickly identify the enabled status of the robot looking at the RSL (Robot Signal Light). Flashing is enabled and solid is disabled.
+
+The robot can only be enabled by the Driver Station (unless connected to an FMS).
+
+::::tip[Keyboard Shortcuts]
+- `[ + ] + \` - Enable the robot
+- `Enter` - Disable the robot
+- `Space` - Emergency Stop
+    - This will require the roboRIO to be rebooted to enable the robot
+- `Backspace` - A Stop
+    - This will only work while in practice mode
+::::
+
+::::danger[WARN WHEN YOU ENABLE]
+Ensure you warn anyone nearby when enabling the robot. The robot is dangerous and can easily hurt someone.
+::::
+
+## Operating Modes
+There are 4 different operating modes that can be selected from the Driver Station.
+### TeleOperated
+This mode will be normal robot functionality. It has no time limit and is typically operation for testing or quick practice.
+### Autonomous
+This mode will only execute code within the autonomous section of the robot code. It has no time limit.
+### Practice
+This mode can be used to simulate a match. You can define the length of each match segment and the Driver Station will handle the enable and disable state aligned with the time settings. This is good for full match simulation while practicing or testing autos with a time limit.
+### Test
+This mode is similar to TeleOperated, but can be reference in robot code to enable or disable specific actions. We typically lock tuning behavior behind this mode.
+
+::::danger[SELECT THE RIGHT MODE]
+Ensure you select the right operation mode before enabling the robot. You do not want to enable the robot in auto when you intend teleop.
+::::
+
