adds info for telemetry based docs

--- a/docs/software/tools/ad-scope.mdx
+++ b/docs/software/tools/ad-scope.mdx
@@ -4,3 +4,6 @@ description: Overview of Advantage Scope and some simple tips.
 hide_table_of_contents: true
 sidebar_position: 7
 ---
+
+# Advantage Scope
+Advantage Scope is an advanced telemetry and log viewing tool developed by FRC Team 6328. They have excellent documentation available [here](https://docs.advantagescope.org/). This page should act only as a quick reference for common actions and you should check their official documentation for more in depth instructions.
