--- a/docs/software/tools/elastic.mdx
+++ b/docs/software/tools/elastic.mdx
@@ -4,3 +4,6 @@ description: Elastic overview and tips for telemetry.
 hide_table_of_contents: false
 sidebar_position: 6
 ---
+
+# Elastic
+Elastic is a simple telemetry tool intended to act as a dashboard during robot operation. There is documentation available [here](https://frc-elastic.gitbook.io/docs). This page should act only as a quick reference for common actions and you should check the official documentation for more in depth instructions.
