--- a/docs/software/tools/hw-config.mdx
+++ b/docs/software/tools/hw-config.mdx
@@ -66,7 +66,7 @@ We try to set most settings in code that way we can enforce and ensure the devic
 
     <TabItem value="rev" label="REV ⚙️">
     ## REV Robotics
-    :::warn[CTRE Devices are Preferred]
+    :::warning[CTRE Devices are Preferred]
     We tend to try to limit REV devices on the robot to attempt to run a common motor controller ecosystem. Sometimes there is no other option and a REV device is the best for a given situation.
     :::
     Hardware that we typically use from REV includes:
