fixes formatting and doc ordering

--- a/docs/software/lessons.mdx
+++ b/docs/software/lessons.mdx
@@ -12,7 +12,7 @@ MARS/WARS has been around since 2012 and we have learned a lot of things about w
     - In years past we have focused on advanced controls using kinematics and spline control. This ends up eating a large portion of development time and can be avoided with simpler control concepts. ***(2025 - REEFSCAPE)***
 - ***Attempt to make all subsystem actions in a state machine.***
     - A state machine for each subsystem can help control exactly what the robot is doing at a given point it time. It gives us control over how it transfers between each state and what each state does. ***(2025 - REEFSCAPE)***
-- Design the robot to work as automated as possible.
+- ***Design the robot to work as automated as possible.***
     - This helps with both diver assist and auto integration, which greatly speeds up development when it comes time for auto and tuning. ***(2025 - REEFSCAPE)***
 
 ### Commands
