adds headers for comms concepts

--- a/docs/software/comms/can.mdx
+++ b/docs/software/comms/can.mdx
@@ -4,3 +4,6 @@ description: Controller Area Network overview and what its used for.
 hide_table_of_contents: true
 sidebar_position: 1
 ---
+
+# Controller Area Network
+CAN or Controller Area Network
