--- a/docs/software/comms/digital.mdx
+++ b/docs/software/comms/digital.mdx
@@ -1,6 +1,9 @@
 ---
-title: Digital IO
+title: Digital Inputs
 description: Digital interfaces overview and what they are used for.
 hide_table_of_contents: true
 sidebar_position: 3
 ---
+
+# Digital Inputs
+Digital Inputs
