--- a/docs/software/comms/ethernet.mdx
+++ b/docs/software/comms/ethernet.mdx
@@ -4,3 +4,6 @@ description: Ethernet overview and what its used for.
 hide_table_of_contents: true
 sidebar_position: 4
 ---
+
+# Ethernet
+Ethernet
