--- a/docs/software/comms/pwm.mdx
+++ b/docs/software/comms/pwm.mdx
@@ -4,3 +4,6 @@ description: Pulse Width Modulation overview and what its used for
 hide_table_of_contents: true
 sidebar_position: 2
 ---
+
+# Pulse Width Modulation
+PWM or Pulse Width Modulation
