adds segment to fix spacing

--- a/docs/software/tools/hw-config.mdx
+++ b/docs/software/tools/hw-config.mdx
@@ -17,6 +17,7 @@ There are very few settings that need changed in the configuration applications,
 We try to set most settings in code that way we can enforce and ensure the devices are always configured correctly.
 :::
 
+Below is reference and tips for each of the primary hardware vendors that we frequently use. Cycle through the different tabs to see the unique setup instructions for each.
 <Tabs>
     <TabItem value="general" label="General 🧰" default>
     ## Generic FRC Hardware
