disables vscode toc

--- a/docs/software/tools/vscode.mdx
+++ b/docs/software/tools/vscode.mdx
@@ -1,7 +1,7 @@
 ---
 title: VSCode
 description: Tips and basics for using VSCode for an FRC project.
-hide_table_of_contents: true
+hide_table_of_contents: false
 sidebar_position: 3
 ---
 
