better formats driver station doc

--- a/docs/software/tools/driver-station.mdx
+++ b/docs/software/tools/driver-station.mdx
@@ -11,9 +11,7 @@ The Driver Station is the primary operator interface with the robot. It can be o
 ## Enabling and Disabling
 The robot will boot up to an disabled state. The robot code is still running, but all motor outputs are disabled so nothing will move. Sensors will still update. Once the robot is enabled motor outputs will be enabled.
 
-You can quickly identify the enabled status of the robot looking at the RSL (Robot Signal Light). Flashing is enabled and solid is disabled.
-
-The robot can only be enabled by the Driver Station (unless connected to an FMS).
+You can quickly identify the enabled status of the robot looking at the RSL (Robot Signal Light). Flashing is enabled and solid is disabled. The robot can only be enabled by the Driver Station (unless connected to an FMS).
 
 :::tip[Keyboard Shortcuts]
 - `[ + ] + \` - Enable the robot
