--- a/docs/software/tools/ad-scope.mdx
+++ b/docs/software/tools/ad-scope.mdx
@@ -6,4 +6,42 @@ sidebar_position: 7
 ---
 
 # Advantage Scope
-Advantage Scope is an advanced telemetry and log viewing tool developed by FRC Team 6328. They have excellent documentation available [here](https://docs.advantagescope.org/). This page should act only as a quick reference for common actions and you should check their official documentation for more in depth instructions.
+Advantage Scope (AdScope) is an advanced telemetry and log viewing tool developed by FRC Team 6328 [^1]. They have excellent documentation available [here](https://docs.advantagescope.org/). This page should act only as a quick reference for common actions and you should check their official documentation for more in depth instructions. The documentation is also available offline in the application.
+
+## Log Files as Source
+AdScope can also interpret `.wpilog`, `.hoot`, and `.dslog` log files that are recorded on the robot during testing/matches. You can open any of these log files from the clicking `File` > `Open Log(s)...` within the menu bar.
+
+See [Managing Log Files](https://docs.advantagescope.org/getting-started/manage-files) for more.
+
+## Live Code as Source
+AdScope is intended for development testing only. It is a bulky application and should not be used during competition. Any topics published to NetworkTables should be available as live telemetry. You will need to ensure the roboRIO address is set correctly in `Help` > `Show Preferences...`. That settings should stay once set.
+
+To start the connect to the robot or simulation you can click the following:
+- **Robot:** `File` > `Connect to Robot`
+- **Simulator** `File` > `Connect to Simulator`
+
+See [Connecting to Live Sources](https://docs.advantagescope.org/getting-started/connect-live) for more.
+
+## Tabs
+There are a bunch of different tabs that you can select from to display different types of data. I am too lazy to list them all out so feel free to check out [Tab Reference](https://docs.advantagescope.org/category/tab-reference) in the AdScope docs. Some of the most helpful tabs are:
+- [👀 3D Field](https://docs.advantagescope.org/tab-reference/3d-field)
+- [🦀 Swerve](https://docs.advantagescope.org/tab-reference/swerve)
+- [📉 Line Graph](https://docs.advantagescope.org/tab-reference/swerve)
+
+:::tip Tab Layout Template
+Throughout the season we try to keep an updated template for different AdScope usages. This can include a tuning template, a match review template, and even a showcase template.
+
+You can load or save to these templates with `File` > `Import Layout...` and `File` > `Export Layout` respectively.
+:::
+
+## Custom Assets
+You can also setup custom assets to fully visualize our robot in AdScope. This is very helpful for simulation and math replay because it can give you an idea of what the robot was doing without have to look at a bunch of states. However it is not easy and it will take a little bit of time to setup. Its recommended to use our [2025 robot project](https://github.com/FRC-Team-4143/mainbot-2025/tree/develop/layouts/adscope-assets) as reference when setting it up. You can also reference the official AdScope doc for [Custom Assets](https://docs.advantagescope.org/more-features/custom-assets) and [3D Components](https://docs.advantagescope.org/tab-reference/3d-field#3d-components).
+
+:::info
+If you just need the rough geometry for your robot I would recommend attempting to implement a [WPILib Mechanism](https://docs.advantagescope.org/tab-reference/3d-field#mechanisms--components). This is much simpler and faster approach.
+:::
+
+[^1]: Cole is a 6328 fanboy
+
+
+
