--- a/docs/software/tools/git.mdx
+++ b/docs/software/tools/git.mdx
@@ -1,7 +1,7 @@
 ---
 title: Git
 description: How to use git to manage our software projects.
-hide_table_of_contents: false
+hide_table_of_contents: true
 sidebar_position: 1
 ---
 
