--- a/docs/software/tools/driver-station.mdx
+++ b/docs/software/tools/driver-station.mdx
@@ -28,13 +28,13 @@ Ensure you warn anyone nearby when enabling the robot. The robot is dangerous an
 
 ## Operating Modes
 There are 4 different operating modes that can be selected from the Driver Station.
-- TeleOperated
+- ***TeleOperated***
     - This mode will be normal robot functionality. It has no time limit and is typically operation for testing or quick practice.
-- Autonomous
+- ***Autonomous***
     - This mode will only execute code within the autonomous section of the robot code. It has no time limit.
-- Practice
+- ***Practice***
     - This mode can be used to simulate a match. You can define the length of each match segment and the Driver Station will handle the enable and disable state aligned with the time settings. This is good for full match simulation while practicing or testing autos with a time limit.
-- Test
+- ***Test***
     - This mode is similar to TeleOperated, but can be reference in robot code to enable or disable specific actions. We typically lock tuning behavior behind this mode.
 
 :::danger[SELECT THE RIGHT MODE]
