--- a/docs/software/tools/elastic.mdx
+++ b/docs/software/tools/elastic.mdx
@@ -1,11 +1,14 @@
 ---
 title: Elastic
 description: Elastic overview and tips for telemetry.
-hide_table_of_contents: false
+hide_table_of_contents: true
 sidebar_position: 6
 ---
 
+import elastic from '@site/static/img/software/tools/elastic/elastic.png';
+
 # Elastic
+<img src={elastic} width="800"/>
 Elastic is a simple telemetry tool developed by FRC Team 353. It is intended to act as a dashboard during robot operation. There is documentation available [here](https://frc-elastic.gitbook.io/docs). This page should act only as a quick reference for common actions and you should check the official documentation for more in depth instructions.
 Elastic is a modern replacement for [SmartDashboard](https://docs.wpilib.org/en/stable/docs/software/dashboards/smartdashboard/smartdashboard-intro.html) and [Shuffleboard](https://docs.wpilib.org/en/stable/docs/software/dashboards/shuffleboard/index.html).
 
