--- a/docs/software/tools/elastic.mdx
+++ b/docs/software/tools/elastic.mdx
@@ -15,9 +15,8 @@ Elastic is a modern replacement for [SmartDashboard](https://docs.wpilib.org/en/
 ## Widgets
 Elastic can see any data published on NetworkTables similar to how SmartDashboard and Shuffleboard worked. You can then add any of these topics to your Elastic window and they will auto determine their widget type based of the datatype of the topic. Some topics like numbers or string can be assigned to multiple different types of widgets.
 
-To add a widget you can click `+ Add Widget` on the top toolbar and it will open and list of topics. All you need to do is drag the topic from the list to somewhere in the viewing window. Once the widget is placed you can resize to best display the data.
-
-After a widget is added you can right click on the container and `Edit Properties` will allow you to change display information about that topic.
+- To add a widget you can click `+ Add Widget` on the top toolbar and it will open and list of topics. All you need to do is drag the topic from the list to somewhere in the viewing window. Once the widget is placed you can resize to best display the data.
+- After a widget is added you can right click on the container and `Edit Properties` will allow you to change display information about that topic.
 
 For more information on adding and customizing widgets you can view Elastic instructions on [Adding and Customizing Widgets](https://frc-elastic.gitbook.io/docs/customizing-your-dashboard/adding-and-customizing-widgets).
 
