adds additional code lang support

--- a/docs/software/tools/github.mdx
+++ b/docs/software/tools/github.mdx
@@ -12,7 +12,7 @@ We have a GitHub organization for our team, which is where all of our repos are 
 
 ## Clone
 If the project you are going to work on is already hosted on GitHub you can clone the repo to your local machine. This will create a local copy of the repo that you can work on. You can clone a repo using the following command.
-```bash
+```git
 git clone REPO_URL
 ```
 :::info[Finding the REPO_URL]
