--- a/docs/software/java/standards.mdx
+++ b/docs/software/java/standards.mdx
@@ -1,6 +1,46 @@
 ---
 title: Programming Standards
 description: MARS/WARS programming standards for java files
-hide_table_of_contents: true
+hide_table_of_contents: false
 sidebar_position: 10
 ---
+
+# Java Programming Standards
+
+## Comments
+- All methods should be commented following java doc styling. Make sure to include any parameters or return members. Example is show below:
+```java
+/**
+ * Calculates the chassis traveled distance based on provided speed and duration
+ *
+ * @param speed current chassis speed (m/s)
+ * @param time duration of travel (s)
+ *
+ * @return traveled distance (m)
+ */
+double calculateDistance(double speed, double time){
+    return speed * time;
+}
+```
+
+## Variables
+- All variables should be named using `snake_case`. Examples are shown below:
+    ```java
+    double current_elevator_position
+    int final_counter
+    boolean is_enabled
+    float error
+    ```
+- Variables belonging to a class ***(or members)*** should have a trailing underscore `_`. Examples are shown below:
+    ```java
+    double current_elevator_position_
+    int final_counter_
+    boolean is_enabled_
+    float error_
+    ```
+
+## Loops
+- Never use `while` loops
+    - They are dangerous in a controls application and could result in a infinite loop if not updated correctly.
+- Iterators for a `for` loops should be used in order of `i`, `j`, and then `k`.
+    - If the iterator is used external to the `for` it should be named something unique to its purpose.
